--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,11 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
+analyzer:
+  errors:
+    use_build_context_synchronously: ignore
+    library_private_types_in_public_api: ignore
+    empty_catches: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
