--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,7 +43,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   tab_indicator_styler: ^2.0.0
   multi_dropdown: ^3.0.1
-  intl: ^0.20.1
+  intl: ^0.19.0
   intl_translation: ^0.20.1
   animated_bottom_navigation_bar: ^1.3.3
 
